# AIssistantGM

./: .env.example  .gitignore  =4.0.0  CLAUDE.md  README.md  probe_rotowire_endpoints.py  pyproject.toml  todo
aissistant_gm/: __init__.py
aissistant_gm/fantrax/: __init__.py  auth.py  cli.py  config.py  database.py  scraper.py  stats.py  sync.py
aissistant_gm/fantrax/commands/: news.py  players.py  roster.py  sync.py  teams.py
aissistant_gm/fantrax/fantraxapi/objs/: base.py  league.py  roster.py  scoring_period.py
fantrax_cli/: __main__.py  auth.py  cache.py  cli.py  config.py  database.py  display.py  stats.py  sync.py
fantrax_cli/commands/: news.py  players.py  roster.py  sync.py  teams.py
integration_tests/: conftest.py  test_commands.py  test_real_data.py
integration_tests/fantrax/: test_commands.py  test_real_data.py  test_scraper_integration.py
nhl-data-pipeline/: =0.40.0  README.md  discover_rotowire_endpoints.py  league_rules.md  pipeline.py
nhl-data-pipeline/assistant/: __init__.py  client.py  formatters.py  main.py  player_match.py  queries.py  scoring.py  system_prompt.txt  tools.py
nhl-data-pipeline/config/: __init__.py  fantasy_constants.py  infra_constants.py
nhl-data-pipeline/db/: __init__.py  nhl_data.db  schema.py
nhl-data-pipeline/docs/: rotowire_endpoints.md
nhl-data-pipeline/fetchers/: __init__.py  dailyfaceoff.py  fantrax_league.py  fantrax_news.py  moneypuck.py  nhl_api.py  puckpedia.py  rotowire.py
nhl-data-pipeline/tests/: conftest.py  eval_assistant.py  test_advanced_queries.py  test_client.py  test_dailyfaceoff.py  test_fantrax_league.py  test_fantrax_news.py  test_fetcher_edge_cases.py  test_formatters.py  test_integration_web_search.py  test_main.py  test_moneypuck.py  test_nhl_api.py  test_pipeline.py  test_player_match.py  test_puckpedia.py  test_queries.py  test_queries_edge_cases.py  test_rotowire.py  test_schema.py  test_schema_edge_cases.py  test_scoring.py  test_scoring_edge_cases.py  test_time.py  test_tools.py
nhl-data-pipeline/utils/: __init__.py  time.py
tests/: __init__.py  test_cache.py  test_config.py  test_database.py  test_display.py  test_sync.py
tests/fantrax/: conftest.py  test_cache.py  test_commands_players.py  test_commands_teams.py  test_database.py  test_display.py  test_fantraxapi_api.py  test_fantraxapi_objs.py  test_scoring_period.py  test_scraper.py  test_sync.py
v1/: .env.example  CLAUDE.md
v1/aissistant_gm/fantrax/: __main__.py  cache.py  cli.py  config.py  database.py  scraper.py  stats.py  sync.py  types.py
v1/aissistant_gm/fantrax/commands/: __init__.py  roster.py
v1/integration_tests/: README.md
v1/integration_tests/fantrax/: conftest.py  test_real_data.py  test_scraper_integration.py
v1/tests/fantrax/: test_auth.py  test_cache.py  test_cli.py  test_commands_news.py  test_commands_roster.py  test_config.py  test_database.py  test_scraper.py  test_stats.py
(+4 files in other folders)
