[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantrax-cli"
version = "0.1.0"
description = "CLI wrapper for Fantrax Fantasy Sports API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AIssistantGM Team"}
]
dependencies = [
    "fantraxapi>=1.0.1",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fantrax = "fantrax_cli.cli:app"

[tool.setuptools]
packages = ["fantrax_cli", "fantrax_cli.commands"]
